Prevent division by zero

BUG: 464055
FIXED-IN: 5.1.4